# mips-ir

./: CMakeLists.txt  library.cpp  library.h
Assembler/: Assembler.cpp  Assembler.h  CMakeLists.txt  Instruction.cpp  Instruction.h
CodeGen/: CMakeLists.txt  CodeGen.h  IRTargetGen.cpp  IRTargetGen.h
CodeGen/Targets/: MipsCodegenTarget.cpp  MipsCodegenTarget.h  MipsIRTargetGen.cpp  MipsIRTargetGen.h
MemoryIR/: Block.cpp  Block.h  CMakeLists.txt  Constant.h  Function.cpp  Function.h  IRContext.cpp  IRContext.h  IRbuilder.h  Instruction.cpp  Instruction.h  Module.cpp  Module.h  Value.h
RegisterAllocation/: CMakeLists.txt  InterferenceGraph.cpp  InterferenceGraph.h  LivenessAnalyzer.cpp  LivenessAnalyzer.h  RegisterAllocator.cpp  RegisterAllocator.h
